# ocland

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exported_functions.def
.eclipse/.metadata/: version.ini
.eclipse/.metadata/.plugins/org.eclipse.cdt.core/: client.1463134229465.pdom  client.language.settings.xml  language.settings.xml  server.1463134214811.pdom  server.language.settings.xml
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/client/: .markers
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/client/.indexes/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/client/.indexes/a8/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/client/.indexes/a8/35/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/client/.indexes/e4/35/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/server/: .markers
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/server/.indexes/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/server/.indexes/a8/15/: history.index  properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/server/.indexes/e4/15/: history.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.projects/server/.indexes/e4/bd/: history.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree  9.tree
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.eclipse/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.eclipse/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.eclipse/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/: server-config.json
.eclipse/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/history/: segments_1
.eclipse/.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: segments_2
.eclipse/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
.eclipse/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2016/5/20/: refactorings.history  refactorings.index
.eclipse/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.sobremesa_0/: node.properties
.eclipse/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.sobremesa_0/FP.local.files_0/: node.properties
.eclipse/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.sobremesa_0/H.local_16/: node.properties
.eclipse/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.eclipse/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.eclipse/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.eclipse/client/: .cproject  .project
.eclipse/server/: .cproject  .project
CMake/: FindLZ4.cmake  FindLZMA.cmake  FindLZO.cmake  FindOpenCL.cmake  FindSNAPPY.cmake
CodeBlocks/: ocland-server.cbp  ocland.cbp  ocland.workspace  test.cbp
icons/: header.xcf
include/: ocl_icd.h
include/ocland/: CMakeLists.txt
include/ocland/client/: command_queue.h  commands_enum.h  context.h  device_id.h  event.h  kernel.h  mem.h  ocland.h  ocland_icd.h  ocland_opencl.h  platform_id.h  program.h  sampler.h  shortcut.h
include/ocland/common/: dataExchange.h  dataPack.h  downloadStream.h  sockets.h  uploadStream.h  usleep.h  verbose.h
include/ocland/server/: dispatcher.h  log.h  ocland_cl.h  ocland_context.h  ocland_event.h  ocland_mem.h  ocland_version.h  validator.h
src/: CMakeLists.txt
src/client/: cl.c  cl_ext.c  cl_gl.c  cl_icd.c  command_queue.c  context.c  device_id.c  event.c  kernel.c  mem.c  ocland.c  ocland.icd.in  ocland_icd.c  platform_id.c  program.c  sampler.c  shortcut.c  verbose.c
src/common/: dataExchange.c  dataPack.c  downloadStream.c  list.c  list.h  uploadStream.c  verbose.c
src/common/unix/: dataExchange.c
src/common/windows/: dataExchange.c
src/examples/: CMakeLists.txt
src/examples/backup/: .main.c.kate-swp  CMakeLists.txt  main.c
src/examples/buffer/: CMakeLists.txt  main.c
src/examples/command_queue/: CMakeLists.txt  main.c
src/examples/context/: CMakeLists.txt  main.c
src/examples/devices/: CMakeLists.txt  main.c
src/examples/flush_finish/: CMakeLists.txt  main.c
src/examples/kernel/: CMakeLists.txt  main.c
src/examples/program/: CMakeLists.txt  main.c
src/examples/user_event/: CMakeLists.txt  main.c
src/examples/write_read/: CMakeLists.txt  main.c
src/server/: dispatcher.c  log.c  ocland.c  ocland_cl.c  ocland_context.c  ocland_event.c  ocland_mem.c  ocland_version.c  validator.c
src/server-daemon/: ocland.conf.in  ocland.in
src/test/: main.c
